@@ -37,11 +37,11 @@ which are comprized of multiple image frames. Various image manipulation
 operations may be applied to the image. Attributes may be set on the image
 to influence the operation of the manipulation operations. The <a href="Pixels.html">Pixels</a>
 class provides low-level access to image pixels. As a convenience, including
-<tt>&lt;Magick++.h></tt> is sufficient in order to use the complete Magick++
-API. The Magick++ API is enclosed within the <i>Magick</i> namespace so
-you must either add the prefix "<tt>Magick::</tt>" to each class/enumeration
-name or add the statement "<tt>using namespace Magick;</tt>" after including
-the <tt>Magick++.h </tt>header.
+<tt>&lt;Magick++.h></tt>
+is sufficient in order to use the complete Magick++ API. The Magick++ API
+is enclosed within the <i>Magick</i> namespace so you must either add the
+prefix "<tt>Magick::</tt>" to each class/enumeration name or add the statement
+"<tt>using namespace Magick;</tt>" after including the <tt>Magick++.h </tt>header.
 <p>Image is very easy to use. For example, here is a the source to a program
 which reads an image, crops it, and writes it to a new file (the exception
 handling is optional but strongly recommended):
@@ -1991,11 +1991,11 @@ Press Telecommunications Council</a> for IPTC profiles.</font></td>
 
 <td><font size=-1>Options</font></td>
 
-<td><font size=-1>unsigned int</font></td>
+<td><font size=-1>double</font></td>
 
 <td><font size=-1>void</font></td>
 
-<td><font size=-1>unsigned int lineWidth_</font></td>
+<td><font size=-1>double lineWidth_</font></td>
 
 <td><font size=-1>Line width for drawing lines, circles, ellipses, etc.
 See <a href="Drawable.html">Drawable</a>.</font></td>
