@@ -1567,9 +1567,9 @@ GIF or progressive JPEG image.</font></td>
 
 <td><font size=-1>Options</font></td>
 
-<td><font size=-1>unsigned int</font></td>
+<td><font size=-1>double</font></td>
 
-<td><font size=-1>unsigned int lineWidth_</font></td>
+<td><font size=-1>double lineWidth_</font></td>
 
 <td><font size=-1>Line width for drawing lines, circles, ellipses, etc.
 See <a href="Drawable.html">Drawable</a>.</font></td>
